# toudoux

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  setup.cfg
.github/workflows/: cd.yml
migrations/: 0001.sql
nginx/conf.d/: admin.conf  api.conf
sources/: controllers.py  models.py  query.py  repositories.py  services.py
