[tool.poetry]
name = "devops"
version = "0.1.0"
description = ""
authors = ["remimd"]

[tool.poetry.dependencies]
python = "^3.11"
asyncmy = "^0.2.8"
blacksheep = "^1.2.17"
click = "^8.1.4"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
